<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        // for buttons
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/shuffle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/shuffle"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/favourites"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/favourites"
                android:text="@string/favourites_btn"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/playlist"
                android:text="@string/playlist_btn"
                android:textColor="@color/black"
                />



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>