<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="3dp"

        android:layout_weight="1"

        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/np"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="monospace"

            tools:ignore="NestedWeights" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favourite_empty"
            android:background="@android:color/transparent"
            app:tint="@color/red"
            android:contentDescription="@string/favourites_btn"
            />
    </LinearLayout>
    
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/play"
        app:shapeAppearanceOverlay="@style/curved_border"
        app:strokeColor="@color/purple"
        app:strokeWidth="2dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_weight="1"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous"
            android:layout_marginHorizontal="10dp"
            app:maxImageSize="30dp"
            android:backgroundTint="@color/blue"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_pause_24"
            app:maxImageSize="30dp"
            android:layout_marginHorizontal="10dp"
            app:shapeAppearanceOverlay="@style/curved_border"
            android:backgroundTint="@color/purple"
            android:tint="@color/white"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            app:maxImageSize="30dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="ok" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/time_now"
            android:gravity="center"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:layout_gravity="center"
            android:progressBackgroundTint="@color/purple"
            android:progressTint="@color/blue"
            android:progress="@integer/material_motion_duration_short_1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/total_length"
            android:gravity="center"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat"
            android:background="@android:color/transparent"
            app:tint="@color/purple"
            android:contentDescription="@string/repeat"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:layout_gravity="center"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_timer_24"
            android:background="@android:color/transparent"
            app:tint="@color/purple"
            android:contentDescription="@string/repeat"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:background="@android:color/transparent"
            app:tint="@color/purple"
            android:contentDescription="@string/repeat"
            android:layout_weight="1"
            android:layout_gravity="center"/>


    </LinearLayout>


</LinearLayout>